--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ h1 {
 
 .product-detail button {
   background-color: #fff;
-  color: #fff;
+  color: #000000;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
@@ -69,5 +69,5 @@ h1 {
 }
 
 .product-detail button:hover {
-  background-color: #0056b3;
+  background-color: #e5e236;
 }
